# SpatialFHE

./: .clang-format  .gitignore  CMakeLists.txt  ciphertext.cpp  ciphertext.h  hecrypto.cpp  hecrypto.h  plaintext.cpp  plaintext.h  sealcrypto.cpp  sealcrypto.h
cmake/: java.cmake
java/: CMakeLists.txt  Loader.java  pom-native.xml.in  pom.xml.in  spatialfhe.i
java_api/: pom.xml
java_api/conf/: jni.conf
java_api/src/main/java/org/ade/SpatialFHE/: FHEHelper.java  LibLoader.java  LoadTest.java
java_api/src/test/java/org/ade/SpatialFHE/: FHEHelperTest.java
java_test/: pom.xml
java_test/conf/: fhe.json
java_test/src/main/java/org/ade/SpatialFHE/: FHEHelper.java  LoadTest.java
java_test/src/test/java/org/ade/SpatialFHE/: FHEHelperTest.java
src/: BaseFHEManager.cpp  BaseFHEManager.cu  BaseFHEManager.h  CMakeLists.txt  CipherMat.cpp  CipherMat.cu  CipherMat.h  CipherText.cpp  CipherText.cu  CipherText.h  FSManager.cpp  FSManager.h  HDFSManager.cpp  HDFSManager.h  HECrypto.cpp  HECrypto.cu  HECrypto.h  LocalFSManager.cpp  LocalFSManager.h  MatFHEManager.cu  MatFHEManager.h  PhantomCrypto.cu  PhantomCrypto.cuh  PlainText.cpp  PlainText.cu  PlainText.h  SealCrypto.cpp  SealCrypto.cu  SealCrypto.h  SpatialFHEManager.cpp  SpatialFHEManager.cu  SpatialFHEManager.h  TFHEBool.cpp  TFHEBool.h  TFHEContext.cpp  TFHEContext.h  TFHEDecimal.cpp  TFHEDecimal.h  TFHEInt32.cpp  TFHEInt32.h  (+20 more)
src/tfhe_geos/: TFHECircularString.cpp  TFHECircularString.h  TFHECoordinate.cpp  TFHECoordinate.h  TFHECoordinateSequence.cpp  TFHECoordinateSequence.h  TFHECoordinateSequenceFactory.cpp  TFHECoordinateSequenceFactory.h  TFHEEnvelope.cpp  TFHEEnvelope.h  TFHEGeometry.cpp  TFHEGeometry.h  TFHEGeometryFactory.cpp  TFHEGeometryFactory.h  TFHELineString.cpp  TFHELineString.h  TFHELinearRing.cpp  TFHELinearRing.h  TFHEPoint.h  TFHEPolygon.cpp  TFHEPolygon.h  constants.h  tfhe_geos.h
src/tfhe_geos/algorithm/: BoundaryNodeRule.cpp  BoundaryNodeRule.h  TFHEDistance.cpp  TFHEDistance.h  TFHEIntersection.cpp  TFHEIntersection.h  TFHELineIntersector.cpp  TFHELineIntersector.h  TFHEOrientation.cpp  TFHEOrientation.h  TFHEPointLocation.cpp  TFHEPointLocation.h  TFHEPolygonNodeTopology.cpp  TFHEPolygonNodeTopology.h  TFHERayCrossingCounter.cpp  TFHERayCrossingCounter.h
src/tfhe_geos/algorithm/locate/: IndexPointInAreaLocator.cpp  IndexPointInAreaLocator.h  SimplePointInAreaLocator.cpp  SimplePointInAreaLocator.h  TFHEPointOnGeometryLocator.cpp  TFHEPointOnGeometryLocator.h
src/tfhe_geos/geom/: TFHECoordinate.cpp  TFHECoordinate.h  TFHECoordinateSequence.cpp  TFHECoordinateSequence.h  TFHECoordinateSequenceFactory.cpp  TFHECoordinateSequenceFactory.h  TFHEEnvelope.cpp  TFHEEnvelope.h  TFHEGeometry.cpp  TFHEGeometry.h  TFHEGeometryFactory.cpp  TFHEGeometryFactory.h  TFHEIntersectionMatrix.cpp  TFHEIntersectionMatrix.h  TFHELineString.cpp  TFHELineString.h  TFHELinearRing.cpp  TFHELinearRing.h  TFHEPoint.cpp  TFHEPoint.h  TFHEPolygon.cpp  TFHEPolygon.h  TFHEQuadrant.cpp  TFHEQuadrant.h  enums.h
src/tfhe_geos/io/: StringTokenizer.cpp  StringTokenizer.h  WKTReader.cpp  WKTReader.h
src/tfhe_geos/noding/: SimpleSegmentSetMutualIntersector.cpp  SimpleSegmentSetMutualIntersector.h  TFHEBasicSegmentString.cpp  TFHEBasicSegmentString.h  TFHESegmentIntersector.h  TFHESegmentSetMutualIntersector.h  TFHESegmentString.cpp  TFHESegmentString.h
src/tfhe_geos/operation/relateng/: DimensionLocation.cpp  DimensionLocation.h  TFHEAdjacentEdgeLocator.cpp  TFHEAdjacentEdgeLocator.h  TFHEBasicPredicate.cpp  TFHEBasicPredicate.h  TFHEEdgeSegmentIntersector.cpp  TFHEEdgeSegmentIntersector.h  TFHEIMPatternMatcher.cpp  TFHEIMPatternMatcher.h  TFHEIMPredicate.cpp  TFHEIMPredicate.h  TFHELinearBoundary.cpp  TFHELinearBoundary.h  TFHENodeSection.cpp  TFHENodeSection.h  TFHENodeSections.cpp  TFHENodeSections.h  TFHEPolygonNodeConverter.cpp  TFHEPolygonNodeConverter.h  TFHERelateEdge.cpp  TFHERelateEdge.h  TFHERelateGeometry.cpp  TFHERelateGeometry.h  TFHERelateMatrixPredicate.cpp  TFHERelateMatrixPredicate.h  TFHERelateNG.cpp  TFHERelateNG.h  TFHERelateNode.cpp  TFHERelateNode.h  TFHERelatePointLocator.cpp  TFHERelatePointLocator.h  TFHERelatePredicate.cpp  TFHERelatePredicate.h  TFHERelateSegmentString.cpp  TFHERelateSegmentString.h  TFHETopologyComputer.cpp  TFHETopologyComputer.h  TFHETopologyPredicate.cpp  TFHETopologyPredicate.h
src/tfhe_geos/util/: GeometricShapeFactory.cpp  GeometricShapeFactory.h  SineStarFactory.cpp  SineStarFactory.h  string.cpp  string.h
test/: CMakeLists.txt  ConcreteDemoSuite.cpp  FsManagerSuite.cpp  InitSuite.cpp  PhantomCryptoSuite.cu  PhantomSpatialFHEManagerSuite.cu  RemoteDecryptSuite.cpp  SealCryptoSuite.cpp  SealSpatialFHEManagerSuite.cu  SpatialFHEManagerSuite.cu  TFHEBasicSuite.cpp  TFHEContextSuite.cpp  TFHEPerfTest.cpp  TfhersDemo.cpp  fsManagerSuite.cpp  initSuite.cpp  sealCryptoSuite.cpp  spatialFHEManagerSuite.cpp  test.cpp  testutils.h
test/perf_test/: PerfTestSuite.cpp  PerformanceTestCase.cpp  PerformanceTestCase.h  PerformanceTestRunner.cpp  PerformanceTestRunner.h  RelateNGLinesOverlappingPerfTest.cpp  RelateNGLinesOverlappingPerfTest.h  RelateNGPolygonOverlappingPerfTest.cpp  RelateNGPolygonOverlappingPerfTest.h  TFHEBaseSuite.h
test/tfhe_geos/algorithm/: IntersectionTest.cpp  LineIntersectionTest.cpp  LineIntersectorTest.cpp  OrientationTest.cpp  PointLocationTest.cpp  PolygonNodeTopologyTest.cpp
test/tfhe_geos/geom/: EnvelopTest.cpp
test/tfhe_geos/noding/: BasicSegmentStringTest.cpp
test/tfhe_geos/operation/relateng/: AdjacentEdgeLocatorTest.cpp  LinearBoundaryTest.cpp  PolygonNodeConverterTest.cpp  RelateGeometryTest.cpp  RelatePointLocatorTest.cpp  RelatePredicateTest.cpp  TFHERelateNGTest.cpp  TFHERelateNGTest.h
